# luacppinterface

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LuaCppInterface.sln  Makefile.am  README.md  appveyor.yml  build-travis.sh  build.sh  configure.ac  generate.rb  shippable.yml
LuaCpp/: LuaCpp.vcxproj  LuaCpp.vcxproj.filters
LuaCppInterface/: Android.mk  LuaCppInterface.cbp  LuaCppInterface.vcxproj  LuaCppInterface.vcxproj.filters  Makefile.am  luacoroutine.cpp  luacoroutine.h  luacpp.cpp  luacppinclude.h  luacppinterface.cpp  luacppinterface.h  luaerror.cpp  luaerror.h  luafunction.cpp  luafunction.h  luafunctionbase.h  luageneralgenericfunctions.h  luagenericfunction.h  lualightuserdata.h  luareference.cpp  luareference.h  luastringconversion.cpp  luastringconversion.h  luatable.cpp  luatable.h  luatype.h  luatypetemplates.h  luauserdata.h  luauserdatabindtemplates.h  luauserdataforwards.h  luavoidgenericfunctions.h
LuaCppInterfaceTests/: LuaCppInterfaceTests.vcxproj  LuaCppInterfaceTests.vcxproj.filters  stdafx.cpp  unittest1.cpp
LuaCppTest/: LuaCppTest.cbp  LuaCppTest.vcxproj  LuaCppTest.vcxproj.filters  luacpp.cpp
LuaCppTest/Debug/: LuaCppTest.vcxprojResolveAssemblyReference.cache
LuaLib/: LuaLib.vcxproj
build-aux/: ax_boost_base.m4
luacppinterface-ios.xcodeproj/: project.pbxproj
luacppinterface-ios.xcodeproj/xcuserdata/davidsiaw.xcuserdatad/xcschemes/: luacppinterface-ios.xcscheme  xcschememanagement.plist
luacppinterface.xcodeproj/: project.pbxproj
luacppinterface.xcodeproj/xcuserdata/davidsiaw.xcuserdatad/xcschemes/: luacppinterface.xcscheme  xcschememanagement.plist
tests/: Makefile.am  Makefile.am.old  config.lua  crashtest  demonstration1.cpp  demonstration2.cpp  demonstration3.cpp  demonstration4.cpp  luacpp.cpp  testcallabletable.cpp  testchartowideconvert.cpp  testcoroutineexception.cpp  testcoroutineexpectedbutnot.cpp  testcreate.cpp  testctoluafunction.cpp  testexceptioninluafunction.cpp  testextractingasfunctionbutistable.cpp  testfunction.cpp  testfunctiondoesntleak.cpp  testfunctionerror.cpp  testfunctionexpectedbutnotcallable.cpp  testfunctionparams.cpp  testfunctionparamsreturn.cpp  testfunctionreturn.cpp  testgetmetatableonclosedstate.cpp  testgetnullstring.cpp  testgetnulltable.cpp  testgetnullwstring.cpp  testgetsetfunction.cpp  testgetsetfunction2.cpp  testgetsetinsidetable.cpp  testgetsetinteger.cpp  testgetsetstring.cpp  testgetsettable.cpp  testgetstate.cpp  testgettypeofvalueat.cpp  testinvalidscript.cpp  testluacoroutineconstructor.cpp  testluafunctionconstructor.cpp  testluatableconstructor.cpp  (+27 more)
