AC_INIT([luacppinterface], [1.0], [bug-report@address])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CXX
AC_PROG_RANLIB
AM_PROG_AR
AX_CXX_COMPILE_STDCXX_11
AX_BOOST_BASE([1.46])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile LuaCppInterface/Makefile])
AC_OUTPUT